[gd_scene load_steps=8 format=3 uid="uid://cjqub7vse1qrt"]

[ext_resource type="PhysicsMaterial" uid="uid://bpb580y2n4mcp" path="res://src/materials/brick.tres" id="1_8ga3t"]
[ext_resource type="Script" path="res://src/objects/brick/brick.gd" id="1_a18mc"]
[ext_resource type="Texture2D" uid="uid://bhi2bgxcuyg4o" path="res://src/objects/brick/assets/bricks.png" id="1_u4g8l"]
[ext_resource type="Script" path="res://src/objects/brick/brick_properties.gd" id="2_e873h"]

[sub_resource type="Resource" id="Resource_g7ipt"]
script = ExtResource("2_e873h")
hits = 1
can_be_destroyed_by_ball = true
can_be_destroyed_by_rocket = true
shape = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4pobi"]
size = Vector2(60, 60)

[sub_resource type="CircleShape2D" id="CircleShape2D_3xld7"]
radius = 30.0

[node name="Brick" type="RigidBody2D"]
collision_layer = 16
collision_mask = 2
physics_material_override = ExtResource("1_8ga3t")
gravity_scale = 0.0
freeze = true
freeze_mode = 1
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_a18mc")
properties = SubResource("Resource_g7ipt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_u4g8l")
hframes = 4
vframes = 3

[node name="CS_Square" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4pobi")

[node name="CS_Triangle" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-30, -30, 30, -30, -30, 30)
disabled = true

[node name="CS_Circle" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_3xld7")
disabled = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
